[package]
name = "yew_unstyled_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
js-sys = "0.3.69"
strum = "0.26.2"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlSelectElement"] }
yew = { version = "0.21.0"}
